unpackaged/main/default/objects/Outgoing_Message__c/Outgoing_Message__c.object-meta.xml
<CustomObject>
    <label>Outgoing Message</label>
    <nameField>
        <displayFormat>OGM-{0000}</displayFormat>
        <label>Outgoing Message Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Outgoing Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>