unpackaged/main/default/objects/Outgoing_Message__c/fields/Additional_Headers__c.field-meta.xml
<CustomField>
    <fullName>Additional_Headers__c</fullName>
    <inlineHelpText>JSON</inlineHelpText>
    <label>Additional Headers</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>