unpackaged/main/default/objects/Outgoing_Message__c/fields/IsMaster__c.field-meta.xml
<CustomField>
    <fullName>IsMaster__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsMaster</label>
    <type>Checkbox</type>
</CustomField>