unpackaged/main/default/objects/Outgoing_Message__c/fields/Last_Try__c.field-meta.xml
<CustomField>
    <fullName>Last_Try__c</fullName>
    <label>Last Try</label>
    <type>DateTime</type>
</CustomField>