unpackaged/main/default/objects/Outgoing_Message__c/fields/Max_Number_of_Tries__c.field-meta.xml
<CustomField>
    <fullName>Max_Number_of_Tries__c</fullName>
    <label>Max Number of Tries</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>