unpackaged/main/default/objects/Outgoing_Message__c/fields/Message_Label__c.field-meta.xml
<CustomField>
    <fullName>Message_Label__c</fullName>
    <label>Message Label</label>
    <length>200</length>
    <type>Text</type>
</CustomField>