unpackaged/main/default/objects/Outgoing_Message__c/fields/Message_Type__c.field-meta.xml
<CustomField>
    <fullName>Message_Type__c</fullName>
    <label>Message Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Known Message</fullName>
            </value>
            <value>
                <fullName>Dynamic Message</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>