unpackaged/main/default/objects/Outgoing_Message__c/fields/Named_Credential_Key__c.field-meta.xml
<CustomField>
    <fullName>Named_Credential_Key__c</fullName>
    <label>Named Credential Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>