unpackaged/main/default/objects/Outgoing_Message__c/fields/Number_Of_Tries__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Tries__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number Of Tries</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>