unpackaged/main/default/objects/Outgoing_Message__c/fields/Object_Id__c.field-meta.xml
<CustomField>
    <fullName>Object_Id__c</fullName>
    <label>Object Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>