unpackaged/main/default/objects/Outgoing_Message__c/fields/Object_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Type_Name__c</fullName>
    <label>Object Type Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>