unpackaged/main/default/objects/Outgoing_Message__c/fields/Parent_Outgoing_Message__c.field-meta.xml
<CustomField>
    <fullName>Parent_Outgoing_Message__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Outgoing Message</label>
    <referenceTo>Outgoing_Message__c</referenceTo>
    <relationshipLabel>Outgoing Messages</relationshipLabel>
    <relationshipName>Outgoing_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>