unpackaged/main/default/objects/Outgoing_Message__c/fields/URL_Parameters__c.field-meta.xml
<CustomField>
    <fullName>URL_Parameters__c</fullName>
    <label>URL Parameters</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>