unpackaged/main/default/objects/Outgoing_Message__c/fields/With_Authentication__c.field-meta.xml
<CustomField>
    <fullName>With_Authentication__c</fullName>
    <defaultValue>false</defaultValue>
    <label>With Authentication</label>
    <type>Checkbox</type>
</CustomField>