unpackaged/main/default/objects/Outgoing_Message__c/recordTypes/Dynamic_Message.recordType-meta.xml
<RecordType>
    <fullName>Dynamic_Message</fullName>
    <active>true</active>
    <label>Dynamic Message</label>
</RecordType>