unpackaged/main/default/objects/Outgoing_Message__c/recordTypes/Known_Message.recordType-meta.xml
<RecordType>
    <fullName>Known_Message</fullName>
    <active>true</active>
    <label>Known Message</label>
</RecordType>