unpackaged/main/default/objects/Outgoing_Message__c/validationRules/File_name_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>File_name_validation</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(
OR(
ISBLANK(File_Name__c),
REGEX(File_Name__c, &quot;[A-Za-z0-9]+.[A-Za-z]{3}&quot;)
)
)</errorConditionFormula>
    <errorDisplayField>File_Name__c</errorDisplayField>
    <errorMessage>File name not valid</errorMessage>
</ValidationRule>