unpackaged/main/default/objects/Outgoing_Message__c/validationRules/JsonMessageCreator_param1_cant_be_empty.validationRule-meta.xml
<ValidationRule>
    <fullName>JsonMessageCreator_param1_cant_be_empty</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  RecordType.DeveloperName = &#39;Dynamic_Message&#39;,
  Class_Name__c = &#39;JsonMessageCreator&#39;,
  ISBLANK(  Param1__c ),
  !IsMaster__c
)</errorConditionFormula>
    <errorDisplayField>Param1__c</errorDisplayField>
    <errorMessage>This is a mandatory field in the handler class &#39;JsonMessageCreator&#39;</errorMessage>
</ValidationRule>