unpackaged/main/default/objects/Outgoing_Message__c/listViews/BellNexxia_Today_CR.listView-meta.xml
<ListView>
    <fullName>BellNexxia_Today_CR</fullName>
    <columns>NAME</columns>
    <columns>Additional_Headers__c</columns>
    <columns>Object_Id__c</columns>
    <columns>Status__c</columns>
    <columns>URL__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>URL__c</field>
        <operation>contains</operation>
        <value>BellNexxia</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>BellNexxia (Today) CR</label>
</ListView>