unpackaged/main/default/objects/Outgoing_Message__c/listViews/Google_Search_RecID.listView-meta.xml
<ListView>
    <fullName>Google_Search_RecID</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Additional_Headers__c</columns>
    <columns>Object_Id__c</columns>
    <columns>Status__c</columns>
    <columns>URL__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Response_Body__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>URL__c</field>
        <operation>contains</operation>
        <value>Google</value>
    </filters>
    <filters>
        <field>URL__c</field>
        <operation>contains</operation>
        <value>chatter/Google</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>9/21/2024 12:00 AM</value>
    </filters>
    <label>Google Search RecID</label>
</ListView>