unpackaged/main/default/objects/Outgoing_Message__c/listViews/Google_Today_OGM.listView-meta.xml
<ListView>
    <fullName>Google_Today_OGM</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>URL__c</columns>
    <columns>Object_Id__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>URL__c</field>
        <operation>contains</operation>
        <value>Google</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Google (Today) OGM</label>
</ListView>