unpackaged/main/default/objects/Outgoing_Message__c/listViews/Rogers_WBI_Today_OGM.listView-meta.xml
<ListView>
    <fullName>Rogers_WBI_Today_OGM</fullName>
    <columns>NAME</columns>
    <columns>Additional_Headers__c</columns>
    <columns>Object_Id__c</columns>
    <columns>Status__c</columns>
    <columns>URL__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Response_Body__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>URL__c</field>
        <operation>contains</operation>
        <value>RogersCC</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Rogers WBI (Today) OGM</label>
    <sharedTo>
        <role>Admin</role>
    </sharedTo>
</ListView>